--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/utilities.min.css">
   </body>
 </html>
